--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_swiper_null_safety: ^1.0.2
+  flutter_activity_recognition: ^3.1.0
+  pedometer: ^4.0.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
