--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_activity_recognition: ^3.1.0
   pedometer: ^4.0.1
   get: ^4.6.6
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
